--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-jest": "22.4.1",
     "babel-preset-react-native": "4.0.0",
     "eslint": "^4.18.2",
+    "eslint-plugin-react-native": "^3.2.1",
     "jest": "22.4.2",
     "react-test-renderer": "^16.3.0-alpha.1"
   },
