--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^4.18.2",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-react-native": "^3.2.1",
+    "husky": "^0.14.3",
     "jest": "22.4.2",
     "react-test-renderer": "^16.3.0-alpha.1"
   },
