--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "eslint ."
+    }
+  },
   "dependencies": {
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0"
